deploy/kubernetes/pid-issuer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pid-issuer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pid-issuer
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 2
  progressDeadlineSeconds: 300
  template:
    metadata:
      labels:
        app: pid-issuer
        tier: vertrouwd
        egress-frontoffice-policy: allow
        ingress-controller-frontoffice-policy: allow
        db-pi-in-zeer-vertrouwd: allow
    spec:
      imagePullSecrets:
        - name: harbor-puller
      containers:
        - name: pid-issuer
          image: $PID_ISSUER_IMAGE
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "512Mi"
              cpu: "300m"
          ports:
            - name: pid-issuer-port
              containerPort: 3007
          volumeMounts:
            - name: pid-issuer-config-volume
              mountPath: /pid_issuer.toml
              subPath: pid_issuer.toml
      volumes:
        - name: pid-issuer-config-volume
          secret:
            secretName: nl-pid-issuer-config
