deploy/kubernetes/wallet-provider-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-provider
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wallet-provider
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 2
  progressDeadlineSeconds: 300
  template:
    metadata:
      labels:
        app: wallet-provider
        tier: vertrouwd
        egress-frontoffice-policy: allow
        ingress-controller-frontoffice-policy: allow
        db-in-zeer-vertrouwd: allow
        hsm-in-zeer-vertrouwd: allow
    spec:
      imagePullSecrets:
        - name: harbor-puller
      serviceAccountName: sp-nonroot
      securityContext:
        runAsUser: 65532
      containers:
        - name: wallet-provider
          image: $WALLET_PROVIDER_IMAGE
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "512Mi"
              cpu: "300m"
          ports:
            - name: wp-port
              containerPort: 3000
          volumeMounts:
            - name: pkcs11-config-volume
              mountPath: /cs_pkcs11_R3.cfg
              subPath: cs_pkcs11_R3.cfg
      volumes:
        - name: pkcs11-config-volume
          configMap:
            name: nl-wallet-hsm-pkcs11
