deploy/kubernetes/gba-fetch-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gba-fetch-frontend
spec:
  selector:
    app: gba-fetch-frontend
    tier: vertrouwd
  ports:
    - name: "gba-fetch-http"
      port: 3000
      targetPort: 3000
