deploy/kubernetes/gbamock-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gbamock
  labels:
    app: haal-centraal-brp-bevragen-api
spec:
  selector:
    name: gbamock
    tier: vertrouwd
  ports:
    - name: "5010"
      port: 5010
      targetPort: 5010
