deploy/kubernetes/mrp-verification-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mrp-verification-server
  labels:
    service: mrp-verification-server
spec:
  selector:
    app: mrp-verification-server
    tier: vertrouwd
  ports:
    - name: mrp-ws-http
      port: 3001
      targetPort: wallet-port
      protocol: TCP
    - name: mrp-ws-req-http
      port: 3002
      targetPort: requester-port
      protocol: TCP
