deploy/kubernetes/update-policy-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: update-policy-server
  labels:
    service: update-policy-server
spec:
  selector:
    app: update-policy-server
    tier: vertrouwd
  ports:
    - name: update-policy-server-http
      port: 3009
      targetPort: ups-port
      protocol: TCP
