deploy/kubernetes/gba-fetch-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nl-wallet-gba-fetch-vpn
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: $K8S_NAMESPACE/nl-wallet-gba-fetch-truststore
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "false"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Cert-Serial $ssl_client_serial;
      more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains";
      more_set_headers "Referrer-Policy: no-referrer";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: deny";
      more_set_headers "Permissions-Policy: camera=(), microphone=()";
      more_set_headers "Content-Security-Policy: default-src 'none'; form-action 'self'; base-uri 'none'; frame-ancestors 'none'";
      more_set_headers "X-Permitted-Cross-Domain-Policies: none";
      more_set_headers "Cross-Origin-Resource-Policy: same-origin";
      more_set_headers "Cross-Origin-Embedder-Policy: require-corp";
      more_set_headers "Cross-Origin-Opener-Policy: same-origin";
spec:
  ingressClassName: nginx
  rules:
    - host: $GBA_FETCH_FRONTEND_INTERNAL_HOSTNAME
      http:
        paths:
          - backend:
              service:
                name: gba-fetch-frontend
                port:
                  number: 3000
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - $GBA_FETCH_FRONTEND_INTERNAL_HOSTNAME
      secretName: wildcard-tls
