deploy/kubernetes/mock-relying-party-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nl-mock-relying-party-public
  labels:
    odcn.rijksapps.nl/inet-loadbalancer: ""
  annotations:
    odcn.rijksapps.nl/inet-loadbalancer-hostnames: "$MOCK_RELYING_PARTY_EXTERNAL_HOSTNAME"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains";
      more_set_headers "Referrer-Policy: no-referrer";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: deny";
      more_set_headers "Permissions-Policy: camera=(), microphone=()";
      more_set_headers "Content-Security-Policy: default-src 'self'; script-src ${CSP_SCRIPT_SRC_MRP}; style-src ${CSP_STYLE_SRC_MRP}; img-src 'self' data:; font-src 'self' data:; form-action 'self'; frame-ancestors 'none'; object-src 'none'; base-uri 'none';";
spec:
  ingressClassName: nginx
  rules:
    - host: $MOCK_RELYING_PARTY_EXTERNAL_HOSTNAME
      http:
        paths:
          - backend:
              service:
                name: mock-relying-party
                port:
                  number: 3004
            path: /$MOCK_RELYING_PARTY_EXTERNAL_CONTEXT_PATH/(.*)
            pathType: Prefix
  tls:
    - hosts:
        - $MOCK_RELYING_PARTY_EXTERNAL_HOSTNAME
      secretName: nl-wallet-letsencrypt-live-cert
