deploy/kubernetes/pid-issuer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nl-pid-issuer-public
  labels:
    odcn.rijksapps.nl/inet-loadbalancer: ""
  annotations:
    odcn.rijksapps.nl/inet-loadbalancer-hostnames: "$PID_ISSUER_EXTERNAL_HOSTNAME"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains"
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "Content-Security-Policy: default-src 'none'; base-uri 'none'; form-action 'none'; frame-ancestors 'none'";
      more_set_headers "X-Permitted-Cross-Domain-Policies: none";
      more_set_headers "Cross-Origin-Resource-Policy: same-origin";
spec:
  ingressClassName: nginx
  rules:
    - host: $PID_ISSUER_EXTERNAL_HOSTNAME
      http:
        paths:
          - backend:
              service:
                name: pid-issuer
                port:
                  number: 3007
            path: /$PID_ISSUER_EXTERNAL_CONTEXT_PATH/(.*)
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - $PID_ISSUER_EXTERNAL_HOSTNAME
      secretName: nl-wallet-letsencrypt-live-cert
