deploy/kubernetes/update-policy-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nl-wallet-update-policy-server-public
  labels:
    odcn.rijksapps.nl/inet-loadbalancer: ""
  annotations:
    odcn.rijksapps.nl/inet-loadbalancer-hostnames: "$UPDATE_POLICY_SERVER_EXTERNAL_HOSTNAME"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains"
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "Content-Security-Policy: default-src 'none'; base-uri 'none'; form-action 'none'; frame-ancestors 'none'";
spec:
  ingressClassName: nginx
  rules:
    - host: $UPDATE_POLICY_SERVER_EXTERNAL_HOSTNAME
      http:
        paths:
          - backend:
              service:
                name: update-policy-server
                port:
                  number: 3009
            path: /$UPDATE_POLICY_SERVER_EXTERNAL_CONTEXT_PATH/(.*)
            pathType: Prefix
  tls:
    - hosts:
        - $UPDATE_POLICY_SERVER_EXTERNAL_HOSTNAME
      secretName: nl-wallet-letsencrypt-live-cert
