deploy/kubernetes/wallet-provider-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nl-wallet-provider-vpn
spec:
  ingressClassName: nginx
  rules:
    - host: $WALLET_PROVIDER_INTERNAL_HOSTNAME
      http:
        paths:
          - backend:
              service:
                name: wallet-provider
                port:
                  number: 3000
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - $WALLET_PROVIDER_INTERNAL_HOSTNAME
      secretName: wildcard-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nl-wallet-provider-public
  labels:
    odcn.rijksapps.nl/inet-loadbalancer: ""
  annotations:
    odcn.rijksapps.nl/inet-loadbalancer-hostnames: "$WALLET_PROVIDER_EXTERNAL_HOSTNAME"
    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains"
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "Content-Security-Policy: default-src 'none'; base-uri 'none'; form-action 'none'; frame-ancestors 'none'";
      more_set_headers "X-Permitted-Cross-Domain-Policies: none";
      more_set_headers "Cross-Origin-Resource-Policy: same-origin";
spec:
  ingressClassName: nginx
  rules:
    - host: $WALLET_PROVIDER_EXTERNAL_HOSTNAME
      http:
        paths:
          - backend:
              service:
                name: wallet-provider
                port:
                  number: 3000
            path: /$WALLET_PROVIDER_EXTERNAL_CONTEXT_PATH/api/v1/(.+)
            pathType: Prefix
  tls:
    - hosts:
        - $WALLET_PROVIDER_EXTERNAL_HOSTNAME
      secretName: nl-wallet-letsencrypt-live-cert
