deploy/kubernetes/mrp-verification-server-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-mrp-in-zeer-vertrouwd
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              db-mrp-in-zeer-vertrouwd: allow
  podSelector:
    matchLabels:
      app: mrp-verification-server-database
  policyTypes:
    - Ingress
